--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,15 @@ edition = "2024"
 dirs = "5.0"
 clap = { version = "4.5.2", features = ["derive"] }
 meval = "0.2"
-anyhow = "1.0"
+anyhow = "1"
+winreg = "0.52"
+native-windows-gui = "1.0.13"
+native-windows-derive = "1.0"
+
+
+[build-dependencies]
+winres = "0.1"
+
+[[bin]]
+name = "tagspeak_setup"
+path = "src/bin/tagspeak_setup.rs"
