--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1"
 winreg = "0.52"
 native-windows-gui = "1.0.13"
 native-windows-derive = "1.0"
+windows-sys = { version = "0.52", features = ["Win32_UI_Shell"] }
 
 
 [build-dependencies]
