--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,22 @@ dirs = "5"
 clap = { version = "4.5.2", features = ["derive"] }
 meval = "0.2"
 anyhow = "1"
+
+[target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 native-windows-gui = "1.0.13"
 native-windows-derive = "1.0"
 windows-sys = { version = "0.52", features = ["Win32_UI_Shell"] }
 
 
-[build-dependencies]
+[features]
+default = []
+setup = []
+
+[target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
 
 [[bin]]
 name = "tagspeak_setup"
 path = "src/bin/tagspeak_setup.rs"
+required-features = ["setup"]
