--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ winit = { version = "0.28", optional = true }
 [build-dependencies]
 winres = { version = "0.1", optional = true }
 
+[dev-dependencies]
+tempfile = "3"
+
 [features]
 windows = [
     "native-windows-gui",
