--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ native-windows-gui = { version = "1.0.13", optional = true }
 native-windows-derive = { version = "1.0", optional = true }
 windows-sys = { version = "0.52", features = ["Win32_UI_Shell"], optional = true }
 winit = { version = "0.28", optional = true }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+serde_yaml = "0.9"
 
 [build-dependencies]
 winres = { version = "0.1", optional = true }
