Add TOML file loading support and reorganize examples
Introduces TOML file loading in the packet loader, including conversion to JSON string. Adds tests for TOML loading, updates dependencies to include toml crate, and reorganizes example files for better structure. Removes obsolete example scripts and directories.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tagspeak_rs"
 version = "0.1.0"
 edition = "2024"
+default-run = "tagspeak_rs"
 
 [dependencies]
 which = "6"
@@ -17,6 +18,7 @@ winit = { version = "0.28", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
+toml = "0.8"
 
 [build-dependencies]
 winres = { version = "0.1", optional = true }
