--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,11 @@ dirs = "5"
 clap = { version = "4.5.2", features = ["derive"] }
 meval = "0.2"
 anyhow = "1"
-winreg = { version = "0.52", optional = true }
-native-windows-gui = { version = "1.0.13", optional = true }
-native-windows-derive = { version = "1.0", optional = true }
-windows-sys = { version = "0.52", features = ["Win32_UI_Shell"], optional = true }
-winit = { version = "0.28", optional = true }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-serde_yaml = "0.9"
-toml = "0.8"
+winreg = "0.52"
+native-windows-gui = "1.0.13"
+native-windows-derive = "1.0"
+windows-sys = { version = "0.52", features = ["Win32_UI_Shell"] }
+
 
 [build-dependencies]
 winres = { version = "0.1", optional = true }
