--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ dirs = "5"
 clap = { version = "4.5.2", features = ["derive"] }
 meval = "0.2"
 anyhow = "1"
+serde_json = "1"
+serde_yaml = "0.9"
+toml = "0.8"
+tempfile = "3"
 
 # Windows-only deps
 [target.'cfg(target_os = "windows")'.dependencies]
