--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1"
 serde_yaml = "0.9"
 toml = "0.8"
 tempfile = "3"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 
 # Windows-only deps
 [target.'cfg(target_os = "windows")'.dependencies]
