--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,17 @@ toml = "0.8"
 tempfile = "3"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 
+[profile.release]
+lto = "thin"
+codegen-units = 1
+strip = "symbols"
+panic = "abort"
+
+[profile.dev]
+incremental = false      # less cache bloat
+debug = 1                # smaller PDBs
+
+
 # Windows-only deps
 [target.'cfg(target_os = "windows")'.dependencies]
 winreg = "0.52"
