--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ debug = 1                # smaller PDBs
 winreg = "0.52"
 native-windows-gui = "1.0.13"
 native-windows-derive = "1.0"
-windows-sys = { version = "0.52", features = ["Win32_UI_Shell"] }
+windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 winres = "0.1"
