Refactor error styling and clean up codebase
Replaces Unicode glyphs with ASCII in error_style for improved terminal compatibility and rewrites error panel borders. Adds a 'setup_wizard' feature in Cargo.toml to gate setup binaries. Removes duplicate field and unused method in Scanner, fixes a logic bug in suggest_packet, removes duplicate mod declaration in main.rs, and deletes tests from packets/files/log.rs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,12 +42,16 @@ winres = "0.1"
 [target.'cfg(target_os = "linux")'.dependencies]
 winit = "0.29"
 
-# no [features] block needed
+[features]
+# Build GUI setup helpers only when explicitly requested
+setup_wizard = []
 
 [[bin]]
 name = "tagspeak_setup"
 path = "src/bin/tagspeak_setup.rs"
+required-features = ["setup_wizard"]
 
 [[bin]]
 name = "tagspeak_setup_linux"
 path = "src/bin/tagspeak_setup_linux.rs"
+required-features = ["setup_wizard"]
