--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ tempfile = "3"
 fastrand = "2.3"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 
+# Optional GUI
+egui = { version = "0.27", optional = true }
+eframe = { version = "0.27", optional = true }
+
 [profile.release]
 lto = "thin"
 codegen-units = 1
@@ -45,11 +49,11 @@ winit = "0.29"
 [features]
 # Build GUI setup helpers only when explicitly requested
 setup_wizard = []
+ui_egui = ["dep:egui", "dep:eframe"]
 
 [[bin]]
 name = "tagspeak_setup"
 path = "src/bin/tagspeak_setup.rs"
-required-features = ["setup_wizard"]
 
 [[bin]]
 name = "tagspeak_setup_linux"
