Add breakers playground, update docs, harden HTTP allowlist
Introduces a suite of 'breakers' example scripts for stress-testing TagSpeak's sandbox and safety features, along with a detailed report in docs/Breakers_Playground_Report.md. Updates documentation to clarify [mod] packet aliases, add new packets (help, input, lint, rand, var, tagspeak), and improve usage examples. Hardened the HTTP allowlist logic to compare parsed URL components and reject userinfo, closing a security gap. Adds a burn_5s test utility, improves error box rendering, and enhances packet reflection to support filesystem-based introspection.

--- a/examples/.tagspeak.toml
+++ b/examples/.tagspeak.toml
@@ -1,5 +1,7 @@
 [network]
 enabled = true
 allow = [
-  "https://httpbin.org/json"
+  "https://httpbin.org/json",
+  "https://allowed-domain.com",
+  "evil.com"
 ]
