--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ toml = "0.8"
 tempfile = "3"
 fastrand = "2.3"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
+chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 
 # Optional GUI
 egui = { version = "0.27", optional = true }
